manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uplus-backtest2
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/alive"
spec:
  selector:
     app: uplus-backtest2
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
